docs: add Telegram env vars to .env.example

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,8 @@ PCHOME_ECWEBSESS=your_session_cookie_here
 
 # Slack Webhook URL (for price drop notifications)
 SLACK_WEBHOOK_URL=https://hooks.slack.com/services/xxx/xxx/xxx
+
+# Telegram Bot (for price drop notifications)
+# See docs/TELEGRAM_SETUP.md for setup instructions
+TELEGRAM_BOT_TOKEN=123456789:ABCdefGHIjklMNOpqrsTUVwxyz
+TELEGRAM_CHAT_ID=987654321
